 * [Test-Group](http://get-carbon.org/help/Test-Group.html) checks if a *local* group exists.
 * [Test-FileShare](http://get-carbon.org/help/Test-FileShare.html) uses WMI to check if a file/SMB share exists on the local computer.
 * [Test-TypeDataMember](http://get-carbon.org/help/Test-TypeDataMember.html) tests if a type has an extended type member defined.
 * [Write-DscError](http://get-carbon.org/help/Write-DscError.html) writes DSC `ErrorLogRecord` objects as errors.

### New DSC Resources

 * [Carbon_EnvironmentVariable](http://get-carbon.org/help/Carbon_EnvironmentVariable.html) creates/removes machine-level environment variables.
 * [Carbon_FirewallRule](http://get-carbon.org/help/Carbon_FirewallRule.html) configures firewall rules.
 * [Carbon_IniFile](http://get-carbon.org/help/Carbon_IniFile.html) manages the contents of INI files.
 * [Carbon_Permission](http://get-carbon.org/help/Carbon_Permission.html) configures file, directory, registry, and certificate permissions.
 * [Carbon_Privilege](http://get-carbon.org/help/Carbon_Privilege.html) configures an identity's privileges.
 * [Carbon_ScheduledTask](http://get-carbon.org/help/Carbon_ScheduledTask.html) configures scheduled tasks with `schtasks.exe`.
 * [Carbon_Service](http://get-carbon.org/help/Carbon_Service.html) configures Windows services.
 
### Added `PassThru` Switches

Added a `PassThru` switch to the following functions, which will return objects of the given type:

 * [Grant-ComPermission](http://get-carbon.org/help/Grant-ComPermission.html): `Carbon.Security.ComAccessRule`, representing the granted permission.
 * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html): `System.Security.AccessControl.AccessRule`, representing the granted permission.
 * [Install-Group](http://get-carbon.org/help/Install-Group.html): `System.DirectoryServices.AccountManagement.GroupPrincipal`, representing the group. 